--- a/style/style.css
+++ b/style/style.css
@@ -13,14 +13,12 @@ body {
 .header{
     max-width: 1440px;
     height: 750px;
-    border: 1px solid red;
     margin: 0 auto;
 }
 .header .nav{
     width: 1124px;
     height: 100px;
     margin: 0 auto;
-    border: 2px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -49,3 +47,48 @@ body {
 }
 
 /* Banner section style ************************************ */
+.banner-section{
+    width: 100%;
+    height: 652px;
+    background-image: url(../assets/Hero-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner-section .banner-content{
+    width: 998px;
+    height: 582px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    text-align: center;
+}
+.banner-section .banner-content img{
+    width: 240.28px;
+    height: 240px;
+}
+.banner-section .banner-content h1{ 
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 48px;
+    font-weight: 800;
+}
+.banner-section .banner-content p{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+}
+.banner-section .banner-content .banner-btn-container button{
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    background: rgb(13, 19, 33);
+    padding: 21px 24px 21px 24px;
+}
