--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,14 @@ body {
     padding: 0px;
 }
 
+/* shared file ******************************************** */
+.primary-text{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+}
+
 /* Header section style *********************************** */
 .header{
     max-width: 1440px;
@@ -92,3 +100,82 @@ body {
     background: rgb(13, 19, 33);
     padding: 21px 24px 21px 24px;
 }
+/* web-development section style ************************************ */
+main{
+    width: 1440px;
+    height: 2000px;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+.web-dev{
+    width: 1140px;
+    height: 1395px;
+    margin: 74px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    padding: 80px 97px;
+    background: rgba(13, 19, 33, 0.02);
+}
+.web-dev .web-dev-title{
+    width: 852px;
+    height: 115px;
+    text-align: center;
+}
+.web-dev .web-dev-title h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+.box{
+    width: 946px;
+    height: 336px;
+    padding: 48px;   
+    border-radius: 16px;
+    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);    
+}
+.box h5{
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 700;    
+}
+.box .web-dev-content{
+    width: 55%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 32px;
+}
+.box .web-dev-content button{
+    padding: 12px 20px 12px 20px;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+      
+}
+.box .web-dev-content button a{
+    text-decoration: none;
+    color: rgb(13, 19, 33);
+}
+.box .web-dev-content-image{
+    width: 30%;
+    height: 100%;
+}
+.web-dev-content-container-1, .web-dev-content-container-3 {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.web-dev-content-container-2{
+    display: flex;
+    
+}
+
