--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,13 @@ body {
 }
 
 /* shared file ******************************************** */
+.primary-h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;  
+    margin-bottom: 24px;  
+}
 .primary-text{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
@@ -103,7 +110,7 @@ body {
 /* web-development section style ************************************ */
 main{
     width: 1440px;
-    height: 2000px;
+    height: 4000px;
     border: 1px solid black;
     margin: 0 auto;
 }
@@ -178,4 +185,29 @@ main{
     display: flex;
     
 }
+
+/* Inspiration section ************************************************* */
+.inspiration{
+    width: 1140px;
+    height: 775px;
+    margin: 88px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.inspiration .inspiration-title{
+    width: 852px;
+    height: 113px;
+    text-align: center;
+}
+.inspiration .inspiration-video-box{
+    width: 100%;
+    height: 614px;
+    padding: 32px;
+}
+.inspiration .inspiration-video-box iframe{
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+}
+
 
