--- a/style/style.css
+++ b/style/style.css
@@ -186,7 +186,7 @@ main{
     
 }
 
-/* Inspiration section ************************************************* */
+/* Inspiration section  style ************************************************* */
 .inspiration{
     width: 1140px;
     height: 775px;
@@ -210,4 +210,60 @@ main{
     border-radius: 16px;
 }
 
+/* Curren Target section style *************************************************** */
+.current-target {
+    width: 1140px;
+    height: 460px;
+    margin: 151px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+}
+.current-target .current-target-title{
+    width: 946px;
+    height: 113px;
+    text-align: center;
+}
+.current-target .current-target-content-container{
+    width: 100%;
+    height: 299px;
+    display: flex;
+    gap: 24px;
+}
+.current-target-content-container .current-target-content{
+    width: 364px;
+    height: 100%;
+    padding: 40px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+.current-target-content-container .current-target-content img{
+    width: 56px;
+    height: 56px;
+    margin-bottom: 24px;
+}
+.current-target-content-container .current-target-content h4{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 8px;
+}
+.current-target-content-container .current-target-content a{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 24px;
+}
+.html , .js{
+    background: rgba(255, 76, 30, 0.05);
+}
+.css{
+    background: rgba(0, 76, 232, 0.05);
+}
 
