--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,7 @@ body {
 /* web-development section style ************************************ */
 main{
     width: 1440px;
-    height: 4000px;
+    height: auto;
     border: 1px solid black;
     margin: 0 auto;
 }
@@ -266,4 +266,59 @@ main{
 .css{
     background: rgba(0, 76, 232, 0.05);
 }
+/* Next-Target section ********************************************************** */
+.next-target{
+    width: 1140px;
+    height: 886px;
+    margin: 111px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+.next-target .next-target-title{
+    width: 946px;
+    height: 113px;
+    margin-bottom: 24px;
+    text-align: center;
+}
+.next-target .next-target-content-container{
+    width: 1140px;
+    height: 219px;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    padding: 40px;
+    display: flex;
+    
+    align-items: center;
+    gap: 24px;
+}
+.current-target-content-container .next-target-content-container-img{
+    width: 15%;
+    height: 100%;
+}
+.next-target-content{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 24px;
 
+}
+.next-target-content h5{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+
+}
+.next-target-content a{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+
+}
+/* Feed-back section ********************************************************** */
