all section name added

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@ body {
     font-weight: 400;
 }
 
-/* Header section style *********************************** */
+/* nav section style *********************************** */
 .header{
     max-width: 1440px;
     height: 750px;
